--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ streamlit
 youtube-transcript-api
 google-api-python-client
 isodate
+python-dotenv
+textblob
+nltk
+spacy
+en_core_news_sm
+
+# pour tout installer faire dans le terminal
+# pip install -r requirements.txt
