--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ textblob
 nltk
 spacy
 en_core_news_sm
+vaderSentiment
 
 # pour tout installer faire dans le terminal
 # pip install -r requirements.txt
