--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ python-dotenv
 textblob
 nltk
 spacy
-en_core_news_sm
+en_core_web_sm
 vaderSentiment
 
 # pour tout installer faire dans le terminal
