--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,17 @@ python-dotenv
 textblob
 nltk
 spacy
-en_core_web_sm
 vaderSentiment
+langchain
+openai
+requests
+dotenv
+langchain_groq
+
+
+
+
+
 
 # pour tout installer faire dans le terminal
 # pip install -r requirements.txt
